--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.1.54",
     "@types/node": "^20.5.9",
     "@vitejs/plugin-vue": "^4.2.3",
     "typescript": "^5.0.2",
